--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "nodemon electron ."
   },
   "repository": {
     "type": "git",
@@ -14,7 +14,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/Nino678190/news-tab/issues"
   },
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "electron": "^35.2.0",
-    "lowdb": "^7.0.1"
+    "lowdb": "^7.0.1",
+    "nodemon": "^3.1.9"
   }
 }
