Füge Readability-Bibliothek hinzu und implementiere Funktion zum Abrufen und Anzeigen von Artikeln. Aktualisiere das Nachrichten-Rendering mit einer Schaltfläche "Mehr erfahren".

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Nino678190/news-tab#readme",
   "dependencies": {
+    "@mozilla/readability": "^0.6.0",
     "axios": "^1.8.4",
     "electron": "^35.2.0",
     "lowdb": "^7.0.1",
