feat: integrate jsdom and node-fetch for improved article parsing
- Added jsdom and node-fetch as dependencies in package.json and package-lock.json.
- Updated preload.js to expose new API methods for fetching and parsing articles.
- Modified renderer.js to handle article fetching and parsing using the new API, including error handling and fallback content extraction.
- Enhanced user interaction by allowing links to open the reader directly.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@mozilla/readability": "^0.6.0",
     "axios": "^1.8.4",
     "electron": "^35.2.0",
+    "jsdom": "^26.1.0",
     "lowdb": "^7.0.1",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9"
   }
 }
